--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,68 @@
     transform: rotate(360deg);
   }
 }
+
+/*$dark-blue: #297699;*/
+/*$light-blue: #66cccc;*/
+/*$ochre-yellow: #eea828;*/
+/*$light-grey: #efefef;*/
+
+/*$transition-width-largest: 1700px;*/
+/*$transition-width-large: 1400px;*/
+/*$transition-width-mobile: 900px;*/
+/*$transition-width-mobile-small: 500px;*/
+
+/*$margin-width: 20%;*/
+/*$container-width: 100 - 2 * $margin-width;*/
+/*$card-margin: 3rem;*/
+/*$card-margin-mobile: 1.5rem;*/
+/*$sign-up-width: 500px;*/
+/*$sign-up-width-mobile: 270px;*/
+
+@font-face {
+  font-family: "San Francisco Medium";
+  font-weight: 500;
+  src: url("https://sf.abarba.me/SF-UI-Display-Medium.otf");
+}
+
+@font-face {
+  font-family: "San Francisco Bold";
+  font-weight: 700;
+  src: url("https://sf.abarba.me/SF-UI-Display-Bold.otf");
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;800&display=swap');
+
+@media screen and (max-width: 900px) {
+  * {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+}
+
+[hidden] {
+  display: none;
+}
+
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+body {
+  font-size: 16px;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+a {
+  color: black;
+  font-style: normal;
+  text-decoration: unset;
+}
